# pytorch-minimize

./: .buildinfo  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  install.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: documentation.yml
_modules/: index.html
_modules/torchmin/: bfgs.html  cg.html  minimize.html  minimize_constr.html  newton.html
_modules/torchmin/constrained/: frankwolfe.html  lbfgsb.html  trust_constr.html
_modules/torchmin/lstsq/: least_squares.html
_modules/torchmin/optim/: minimizer.html  scipy_minimizer.html
_modules/torchmin/trustregion/: dogleg.html  exact.html  krylov.html  ncg.html
_sources/: install.rst.txt
_sources/api/: index.rst.txt  minimize-cg.rst.txt  minimize-constr-frankwolfe.rst.txt  minimize-dogleg.rst.txt  minimize-trust-krylov.rst.txt  minimize-trust-ncg.rst.txt
_sources/examples/: index.rst.txt
_sources/user_guide/: index.rst.txt
_static/: custom.css  documentation_options.js
api/: index.html  minimize-bfgs.html  minimize-cg.html  minimize-constr-frankwolfe.html  minimize-constr-lbfgsb.html  minimize-constr-trust-constr.html  minimize-dogleg.html  minimize-lbfgs.html  minimize-newton-cg.html  minimize-newton-exact.html  minimize-trust-exact.html  minimize-trust-krylov.html  minimize-trust-ncg.html
docs/: requirements.txt
docs/source/: conf.py  getting_started.rst  index.rst  install.rst
docs/source/api/: index.rst  minimize-bfgs.rst  (+10 more)
examples/: constrained_optimization_adversarial_examples.ipynb  index.html  rosen_minimize.ipynb  scipy_benchmark.py  test.py  train_mnist_Minimizer.py
fmin/: __init__.py  bfgs.py  cg.py  conjgrad.py  function.py  line_search.py  minimize.py  minimize_constr.py  newton.py  optim.py  trust_constr.py
fmin/lstsq/: cg.py  common.py  least_squares.py  linear_operator.py  lsmr.py  trf.py
fmin/trustregion/: __init__.py  base.py  dogleg.py  exact.py  ncg.py
tests/: conftest.py  test_imports.py
tests/torchmin/: test_bounds.py  test_frankwolfe.py  test_lbfgsb.py  test_minimize.py  test_minimize_constr.py  test_minimize_constr_frankwolfe.py
torchmin/: __init__.py  _optimize.py  benchmarks.py  bfgs.py  cg.py  frankwolfe.py  function.py  lbfgsb.py  line_search.py  line_search_bk.py  lm_exact.py  minimize.py  minimize_constr.py  minimize_constr_frankwolfe.py  newton.py  optim.py  ssbroyden.py
torchmin/constrained/: frankwolfe.py  lbfgsb.py  trust_constr.py
torchmin/lstsq/: __init__.py  common.py  trf.py
torchmin/optim/: __init__.py  minimizer.py  scipy_minimizer.py
torchmin/trustregion/: __init__.py  base.py  dogleg.py  exact.py  krylov.py  ncg.py
user_guide/: index.html
(+2 files in other folders)
