[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-minimize"
version = "0.0.1"
authors = [
  { name="Reuben Feinman", email="reuben.feinman@nyu.edu" },
]
description = "Newton and Quasi-Newton optimization with PyTorch"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://pytorch-minimize.readthedocs.io"